[package]
name = "cataklysm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-sizes"]
common-sizes = ["5", "6"]
all-sizes = ["3", "4", "5", "6", "7", "8"]
3 = []
4 = []
5 = []
6 = []
7 = []
8 = []

# Do not use outside of development
__template = []

[dependencies]
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
tokio = { version = "1.35.1", features = [
	"rt",
	"io-std",
	"io-util",
	"sync",
	"macros",
] }
takparse = "0.6.0"

[dev-dependencies]
rstest = "0.18.2"

[profile.release-safe]
inherits = "release"
debug-assertions = true
overflow-checks = true
