[workspace]
members = [
	"generic/size3",
	"generic/size4",
	"generic/size5",
	"generic/size6",
	"generic/size7",
	"generic/size8",
	"common",
]

[package]
name = "cataklysm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-sizes"]
common-sizes = ["5", "6"]
all-sizes = ["3", "4", "5", "6", "7", "8"]
3 = ["dep:size3"]
4 = ["dep:size4"]
5 = ["dep:size5"]
6 = ["dep:size6"]
7 = ["dep:size7"]
8 = ["dep:size8"]

[dependencies]
tokio = { version = "1.35.1", features = [
	"rt",
	"io-std",
	"io-util",
	"sync",
	"macros",
	"time",
] }
common = { path = "common" }
size3 = { path = "generic/size3", optional = true }
size4 = { path = "generic/size4", optional = true }
size5 = { path = "generic/size5", optional = true }
size6 = { path = "generic/size6", optional = true }
size7 = { path = "generic/size7", optional = true }
size8 = { path = "generic/size8", optional = true }

[dev-dependencies]
rstest = "0.18.2"

[profile.release-safe]
inherits = "release"
debug-assertions = true
overflow-checks = true
