[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alt-seed = []
event-log = ["dep:hashbrown"]

[dependencies]
rand = { version = "0.8.5", default-features = false }
hashbrown = { version = "0.14.3", optional = true }
