[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
event-log = ["dep:hashbrown", "dep:rand_chacha", "dep:rand_distr"]

[dependencies]
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
rand_distr = { version = "0.4.3", default-features = false, optional = true }
hashbrown = { version = "0.14.3", optional = true }
