[package]
name = "size3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "../src/lib.rs"

[features]
default = ["3", "runtime-config"]
runtime-config = []
3 = []

[dependencies]
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
takparse = "0.6.0"
common = { path = "../../common" }
