[package]
name = "size3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "../src/lib.rs"

[features]
default = ["3"]
3 = []

[dependencies]
common = { path = "../../common" }
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
